refactor: Refatoração do backend, voltando versão do Spring e implementando Exception handler